add api binding test
